--- a/jcasc/jenkins.yaml
+++ b/jcasc/jenkins.yaml
@@ -10,25 +10,11 @@ jenkins:
         value: "${GITHUB_USER}"
       - key: "BUNDLE_ID"
         value: "${CASC_BUNDLE_ID}"
-  quietPeriod: 0
-  systemMessage: 'Jenkins configured using CloudBees CI CasC v3'
+  systemMessage: 'Jenkins configured using CloudBees CI CasC with controller overrides'
 notificationConfiguration:
   enabled: true
   router: "operationsCenter"
 unclassified:
-  hibernationConfiguration:
-    activities:
-    - "build"
-    - "web"
-    enabled: true
-    gracePeriod: 1500
-  gitHubConfiguration:
-    apiRateLimitChecker: ThrottleForNormalize
-  gitHubPluginConfig:
-    hookSecretConfigs:
-    - credentialsId: "cloudbees-ci-workshop-github-webhook-secret"
-  globalDefaultFlowDurabilityLevel:
-    durabilityHint: PERFORMANCE_OPTIMIZED
   globallibraries:
     libraries:
     - defaultVersion: "main"
@@ -41,4 +27,4 @@ unclassified:
               repoOwner: "${GITHUB_ORGANIZATION}"
               repository: "pipeline-library"
   headerLabel:
-    text: "${GITHUB_APP}-bundle-v3"
+    text: "${GITHUB_APP}-bundle-v4"
